Bug 1167105 - Part 1. Set temporary range until OnSelectionChange is called. r=masayuki